# omtsf

./: CONTRIBUTING.md  LICENSE  README.md
.claude/: CLAUDE.md
.claude/commands/: implement.md  spec-implementation-plan.md
.github/workflows/: ci.yml
cli-rs/: README.md
docs/: vision.md
docs/governance/: tsc-charter.md
docs/reviews/: binary-format-panel-report.md  entity-identification-review-engstrom.md  entity-identification-review-moreau.md  entity-identification-review-okafor.md  entity-identification-review-osei.md  entity-identification-spec-panel-report.md  entity-identification-spec-r2-panel-report.md  excel-import-format-panel-report.md  full-app-panel-report.md  full-suite-review-entity-identification-expert.md  full-suite-review-supply-chain-expert.md  graph-modeling-expert-labels-review.md  labels-reporting-entity-panel-report.md  labels-reporting-entity-review-procurement.md  regulatory-compliance-labels-review.md  reimport-workflow-gap-panel-report.md  spec-suite-review-enterprise-integration.md  spec-suite-review-regulatory-compliance.md  supply-chain-segmentation-panel-report.md
docs/specs/: entity-identification.md  selective-disclosure.md
docs/usecases/: README.md
omts-rs/docs/: tasks.md
omtsf-rs/: Cargo.toml  deny.toml  justfile
omtsf-rs/crates/omtsf-bench/: BENCHMARK_RESULTS.md  Cargo.toml
omtsf-rs/crates/omtsf-bench/benches/: cbor_lib_comparison.rs  flatten_overhead.rs  graph_queries.rs  huge_cbor.rs  huge_file.rs  parse_serialize.rs  selector_query.rs  subgraph_extraction.rs  validation.rs
omtsf-rs/crates/omtsf-bench/src/: correctness.rs  lib.rs
omtsf-rs/crates/omtsf-bench/src/generator/: edges.rs  identifiers.rs  mod.rs  nodes.rs  topology.rs
omtsf-rs/crates/omtsf-bench/tests/: correctness_invariants.rs  generator_validity.rs
omtsf-rs/crates/omtsf-cli/: Cargo.toml
omtsf-rs/crates/omtsf-cli/src/: error.rs  format.rs  io.rs  main.rs
omtsf-rs/crates/omtsf-cli/src/cli/: mod.rs  tests.rs
omtsf-rs/crates/omtsf-cli/src/cmd/: convert.rs  diff.rs  extract_subchain.rs  import.rs  init.rs  inspect.rs  merge.rs  mod.rs  path.rs  query.rs  reach.rs  redact.rs  selectors.rs  subgraph.rs  validate.rs
omtsf-rs/crates/omtsf-cli/src/cmd/diff/: mod.rs
omtsf-rs/crates/omtsf-cli/tests/: cmd_convert.rs  cmd_diff.rs  cmd_export.rs  cmd_import.rs  cmd_init.rs  cmd_inspect.rs  cmd_merge.rs  cmd_multi_encoding.rs  cmd_path.rs  cmd_query.rs  cmd_reach.rs  cmd_redact.rs  cmd_subgraph.rs  cmd_validate.rs  e2e_import_all_commands.rs  e2e_merge.rs  e2e_merge_regression.rs  e2e_pipelines.rs  e2e_redaction.rs  e2e_supplier_list.rs  e2e_ux_polish.rs
omtsf-rs/crates/omtsf-core/: Cargo.toml
omtsf-rs/crates/omtsf-core/src/: boundary_hash.rs  canonical.rs  cbor.rs  check_digits.rs  convert.rs  diff.rs  dynvalue.rs  encoding.rs  enums.rs  file.rs  graph.rs  identity.rs  lib.rs  merge.rs  merge_pipeline.rs  newtypes.rs  redaction.rs  rules_l1_eid.rs  sensitivity.rs  serde_helpers.rs  structures.rs  test_helpers.rs  types.rs  union_find.rs  validation.rs
omtsf-rs/crates/omtsf-core/src/diff/: engine.rs  helpers.rs  matching.rs  props.rs  types.rs
omtsf-rs/crates/omtsf-core/src/diff/tests/: edge_tests.rs  mod.rs  node_tests.rs
omtsf-rs/crates/omtsf-core/src/graph/: cycles.rs  extraction.rs  mod.rs  queries.rs  selectors.rs
omtsf-rs/crates/omtsf-core/src/graph/extraction/tests/: mod.rs  selector_tests.rs
omtsf-rs/crates/omtsf-core/src/graph/queries/: mod.rs  tests.rs
omtsf-rs/crates/omtsf-core/src/graph/selectors/: mod.rs  tests.rs
omtsf-rs/crates/omtsf-core/src/identity/tests/: edge_property_tests.rs  edge_tests.rs  identifier_tests.rs
omtsf-rs/crates/omtsf-core/src/merge/: tests.rs
omtsf-rs/crates/omtsf-core/src/merge_pipeline/: pipeline.rs  tests.rs
omtsf-rs/crates/omtsf-core/src/redaction/: mod.rs
omtsf-rs/crates/omtsf-core/src/redaction/tests/: classify_tests.rs  filter_tests.rs
omtsf-rs/crates/omtsf-core/src/rules_l1_eid/: tests.rs
omtsf-rs/crates/omtsf-core/src/structures/: edge.rs  node.rs  tests.rs
omtsf-rs/crates/omtsf-core/src/validation/: external.rs  mod.rs  rules_l1_gdm.rs  rules_l1_sdi.rs  rules_l2.rs  rules_l3.rs  tests.rs
omtsf-rs/crates/omtsf-core/src/validation/rules_l1_gdm/: tests.rs
omtsf-rs/crates/omtsf-core/src/validation/rules_l1_sdi/: tests.rs
omtsf-rs/crates/omtsf-core/src/validation/rules_l2/: tests.rs
omtsf-rs/crates/omtsf-core/tests/: binary_fixture_tests.rs  generate_binary_fixtures.rs  merge_properties.proptest-regressions  merge_properties.rs  parse_fixtures.rs  redact_pipeline.rs  schema_conformance.rs  wasm_compat.rs
omtsf-rs/crates/omtsf-core/tests/schema_conformance/: cross_cutting.rs  schema_fixtures.rs
omtsf-rs/crates/omtsf-excel/: Cargo.toml
omtsf-rs/crates/omtsf-excel/src/: edges.rs  error.rs  identifiers.rs  lib.rs  metadata.rs  nodes.rs  sheet.rs  slug.rs  supplier_list.rs
omtsf-rs/crates/omtsf-excel/src/export/: edges.rs  nodes.rs  supplier_list.rs
omtsf-rs/crates/omtsf-wasm/: Cargo.toml
omtsf-rs/docs/: cli-interface.md  data-model.md  diff.md  graph-engine.md  merge.md  overview.md  query.md  redaction.md  tasks.md  validation.md
omtsf-rs/tests/fixtures/: diff-base.omts  diff-modified.omts  extension-types.cbor.omts  full-featured.cbor.omts  full-featured.cbor.zstd.omts  full-featured.omts  full-featured.zstd.omts  graph-query.omts  invalid-edge.omts  merge-a.omts  merge-annulled-lei-a.omts  merge-annulled-lei-b.omts  merge-b.omts  merge-disjoint-a.omts  merge-disjoint-b.omts  merge-full-overlap-a.omts  merge-full-overlap-b.omts  merge-partial-a.omts  merge-partial-b.omts  merge-transitive-a.omts  merge-transitive-b.omts  minimal.cbor.omts  minimal.omts  minimal.zstd.omts  redact-internal.omts  redact-partner.omts  redact-with-boundary.omts
spec/: entity-identification.md  erp-integration.md  graph-data-model.md  merge-semantics.md  selective-disclosure.md  serialization-bindings.md  standards-mapping.md
templates/excel/: generate_template.py  omts-import-example.xlsx  omts-import-template.xlsx  omts-supplier-list-example.xlsx  (+1 more)
usecases/: README.md
(+7 files in other folders)
