[package]
name = "omtsf-bench"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
publish = false

[dependencies]
omtsf-core = { path = "../omtsf-core" }
petgraph = "0.7"
rand = { version = "0.8", features = ["std_rng"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "parse_serialize"
harness = false

[[bench]]
name = "graph_construction"
harness = false

[[bench]]
name = "graph_queries"
harness = false

[[bench]]
name = "subgraph_extraction"
harness = false

[[bench]]
name = "cycle_detection"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "merge_pipeline"
harness = false

[[bench]]
name = "redaction"
harness = false

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "selector_query"
harness = false

[lints]
workspace = true
