[package]
name = "omtsf-bench"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license = "Apache-2.0"
publish = false

[dependencies]
omtsf-core = { path = "../omtsf-core", version = "0.1.0" }
petgraph = "0.7"
rand = { version = "0.8", features = ["std_rng"] }
serde_json = "1"

[dev-dependencies]
cbor4ii = { version = "1", features = ["serde1", "use_std"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }

[[bin]]
name = "gen-huge"
path = "src/bin/gen_huge.rs"

[[bench]]
name = "parse_serialize"
harness = false

[[bench]]
name = "graph_construction"
harness = false

[[bench]]
name = "graph_queries"
harness = false

[[bench]]
name = "subgraph_extraction"
harness = false

[[bench]]
name = "cycle_detection"
harness = false

[[bench]]
name = "validation"
harness = false

[[bench]]
name = "merge_pipeline"
harness = false

[[bench]]
name = "redaction"
harness = false

[[bench]]
name = "diff"
harness = false

[[bench]]
name = "selector_query"
harness = false

[[bench]]
name = "huge_file"
harness = false

[[bench]]
name = "huge_cbor"
harness = false

[[bench]]
name = "flatten_overhead"
harness = false

[[bench]]
name = "cbor_lib_comparison"
harness = false

[lints]
workspace = true
