[package]
name = "omtsf-core"
version = "0.1.0"
edition = "2024"
description = "Core library for the Open Multi-Tier Supply-Chain Framework"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
regex = "1"

[lints]
workspace = true
