[package]
name = "omtsf-core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Core library for the Open Multi-Tier Supply-Chain Framework"
license = "Apache-2.0"

[features]
default = ["compression"]
compression = ["dep:zstd"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
petgraph = "0.7"
sha2 = "0.10"
getrandom = { version = "0.2", features = ["js"] }
regex = "1"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
proptest = "1"
sha2 = "0.10"

[lints]
workspace = true
